Set default gracePeriod to 60

--- a/Installer/Files.wxs
+++ b/Installer/Files.wxs
@@ -73,7 +73,7 @@
           </Component>
           <Component Id="GraceRegistry" Guid="95d55abe-d91e-4fc7-a44b-598a7ab4f9a3">
             <RegistryKey Root="HKLM" Key="SOFTWARE\FOG">
-              <RegistryValue Name="gracePeriod" Type="string" Value="FOG" />
+              <RegistryValue Name="gracePeriod" Type="string" Value="60" />
             </RegistryKey>
           </Component>
           <Component Id="WebRootRegistry" Guid="4d726fa5-f228-4efa-b006-872efa673881">
