Add Sleep to registry and cycle GUIDs

--- a/Installer/Product.wxs
+++ b/Installer/Product.wxs
@@ -66,8 +66,7 @@
       <ComponentRef Id="VersionRegistry" />
       <ComponentRef Id="CompanyRegistery" />
       <ComponentRef Id="GraceRegistry" />
-
-      
+      <ComponentRef Id="SleepRegistry" />
     </Feature>
   </Product>
 </Wix>
