--- a/Installer/Files.wxs
+++ b/Installer/Files.wxs
@@ -71,11 +71,17 @@
               <RegistryValue Name="Company" Type="string" Value="FOG" />
             </RegistryKey>
           </Component>
-          <Component Id="GraceRegistry" Guid="95d55abe-d91e-4fc7-a44b-598a7ab4f9a3">
+          <Component Id="GraceRegistry" Guid="4e7bd6a9-076a-41ad-9cdc-a8579c89d17f">
             <RegistryKey Root="HKLM" Key="SOFTWARE\FOG">
               <RegistryValue Name="gracePeriod" Type="string" Value="60" />
             </RegistryKey>
           </Component>
+          <Component Id="SleepRegistry" Guid="38598781-967c-401d-ad7e-6e7669724f4c">
+            <RegistryKey Root="HKLM" Key="SOFTWARE\FOG">
+              <RegistryValue Name="Sleep" Type="string" Value="60" />
+            </RegistryKey>
+          </Component>        
+          
           <Component Id="WebRootRegistry" Guid="4d726fa5-f228-4efa-b006-872efa673881">
             <RegistryKey Root="HKLM" Key="SOFTWARE\FOG">
               <RegistryValue Name="WebRoot" Type="string" Value="[WEBROOT]" />
