--- a/Installer/Product.wxs
+++ b/Installer/Product.wxs
@@ -49,7 +49,8 @@
     <Binary Id="SetupHelper.CA.dll" SourceFile="..\bin\SetupHelper.CA.dll" />
     <CustomAction Id="InstallCert" Return="check" Impersonate="no" Execute="deferred" BinaryKey="SetupHelper.CA.dll" DllEntry="InstallCert" />
     <CustomAction Id="UninstallCert" Return="check" Impersonate="no" Execute="deferred" BinaryKey="SetupHelper.CA.dll" DllEntry="UninstallCert" />
-
+    <CustomAction Id="CleanTasks" Return="check" Impersonate="no" Execute="deferred" BinaryKey="SetupHelper.CA.dll" DllEntry="CleanTasks" />
+    
 
     <UIRef Id="DialogStructure" />
     <!-- Configure what to install -->
