--- a/Installer/Dialog_Config.wxs
+++ b/Installer/Dialog_Config.wxs
@@ -30,8 +30,8 @@
                 <Control Property="USETRAY" Type="CheckBox" Id="UseTray" Width="83" Height="17" X="11" Y="79" Text="Enable FOG Tray" Default="yes" CheckBoxValue="1" />
                 <Control Property="WEBADDRESS" Type="Edit" Id="ServerIP" Width="287" Height="15" X="71" Y="22" Text="fog-server" />
                 <Control Type="Text" Id="ServerIPLabel" Width="60" Height="12" X="8" Y="22" Text="Server Adress:" />
-                <Control Type="Text" Id="Web Root:" Width="50" Height="17" X="8" Y="49" Text="Web Root:" />
-                <Control Type="Edit" Id="WEBROOT" Width="287" Height="15" X="71" Y="45" Text="/fog" />
+                <Control Type="Text" Id="WEBROOTText" Width="50" Height="17" X="8" Y="49" Text="Web Root:" />
+                <Control Property="WEBROOT" Type="Edit" Id="WEBROOTTextBox" Width="287" Height="15" X="71" Y="45" Text="/fog" />
             </Dialog>
         </UI>
     </Fragment>
