Include MonoHelper in MSI

--- a/Installer/Files.wxs
+++ b/Installer/Files.wxs
@@ -42,6 +42,7 @@
 
             <File Id="FOGUpdateHelper" Name="FOGUpdateHelper.exe" Source="..\bin\FOGUpdateHelper.exe" />
             <File Id="FOGUpdateWaiter" Name="FOGUpdateWaiter.exe" Source="..\bin\FOGUpdateWaiter.exe" />
+            <File Id="MonoHelper" Name="MonoHelper.exe" Source="..\bin\MonoHelper.exe" />
             <File Id="FOGNotificationGUI" Name="FOGNotificationGUI.exe" Source="..\bin\FOGNotificationGUI.exe">
               <fire:FirewallException Id="FOGTNGUIFW" Name="FOGNGUI" Protocol="udp" Scope="any"/>
             </File>
