--- a/Installer/Product.wxs
+++ b/Installer/Product.wxs
@@ -19,7 +19,7 @@
  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 -->
 
-<Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
+<Wix xmlns="http://schemas.microsoft.com/wix/2006/wi" xmlns:iis="http://schemas.microsoft.com/wix/IIsExtension">
   <Product Id="*" Name="FOG Service" Language="1033" Version="0.9.4" UpgradeCode="1CCFDEAF-53E9-43AC-AE18-F9F86CEFA4EA"
            Manufacturer="FOG">
     <Package Description="FOG Service" Comments="A client for the FOG project" InstallerVersion="300" Compressed="yes"
@@ -34,7 +34,6 @@
       <Custom Action="InstallCert" Before="InstallFinalize">NOT REMOVE="ALL"</Custom>
       <Custom Action="UninstallCert" After="InstallFiles">REMOVE="ALL"</Custom>
       <Custom Action="CleanTasks" After="InstallFiles"></Custom>
-      
       <RemoveExistingProducts Before="InstallInitialize" />
     </InstallExecuteSequence>
     <!-- Setup the UI -->
@@ -50,6 +49,7 @@
     <Property Id="MSIRESTARTMANAGERCONTROL" Value="Disable" />
 
     <Binary Id="SetupHelper.CA.dll" SourceFile="..\bin\SetupHelper.CA.dll" />
+    <Binary Id="CACertStream" SourceFile="..\bin\fog.ca.cer" />
     <CustomAction Id="InstallCert" Return="check" Impersonate="no" Execute="deferred" BinaryKey="SetupHelper.CA.dll" DllEntry="InstallCert" />
     <CustomAction Id="UninstallCert" Return="check" Impersonate="no" Execute="deferred" BinaryKey="SetupHelper.CA.dll" DllEntry="UninstallCert" />
     <CustomAction Id="CleanTasks" Return="check" Impersonate="no" Execute="deferred" BinaryKey="SetupHelper.CA.dll" DllEntry="CleanTasks" />
@@ -58,8 +58,7 @@
     <UIRef Id="DialogStructure" />
     <!-- Configure what to install -->
     <Media Id="1" Cabinet="contents.cab" EmbedCab="yes" CompressionLevel="high" />
-    <Directory Id="TARGETDIR" Name="SourceDir">
-    </Directory>
+    <Directory Id="TARGETDIR" Name="SourceDir"/>
     <Feature Id="Base" Title="FOG Service" Description="A client for the FOG server" Level="1">
       <ComponentRef Id="StandardComponent" />
       <ComponentRef Id="ServerRegistry" />
@@ -72,7 +71,7 @@
       <ComponentRef Id="GraceRegistry" />
       <ComponentRef Id="LogRootRegistry" />
       <ComponentRef Id="SleepRegistry" />
-      <ComponentRef Id="fog.ca.cer"/>
+      <ComponentRef Id="CACert" />
     </Feature>
   </Product>
 </Wix>
