--- a/Installer/Product.wxs
+++ b/Installer/Product.wxs
@@ -34,6 +34,11 @@
       <Custom Action="InstallCert" Before="InstallFinalize">NOT REMOVE="ALL"</Custom>
       <Custom Action="UninstallCert" After="InstallFiles">REMOVE="ALL"</Custom>
       <Custom Action="CleanTasks" After="InstallFiles"></Custom>
+      
+      <Custom Action="SetFOGCAProp" Before="InstallFOGCA" />
+      <Custom Action="InstallFOGCA" Before="InstallFinalize">NOT REMOVE="ALL"</Custom>
+      <Custom Action="UninstallFOGCA" After="InstallFiles">REMOVE="ALL"</Custom>
+      
       <RemoveExistingProducts Before="InstallInitialize" />
     </InstallExecuteSequence>
     <!-- Setup the UI -->
@@ -49,12 +54,15 @@
     <Property Id="MSIRESTARTMANAGERCONTROL" Value="Disable" />
 
     <Binary Id="SetupHelper.CA.dll" SourceFile="..\bin\SetupHelper.CA.dll" />
-    <Binary Id="CACertStream" SourceFile="..\bin\fog.ca.cer" />
     <CustomAction Id="InstallCert" Return="check" Impersonate="no" Execute="deferred" BinaryKey="SetupHelper.CA.dll" DllEntry="InstallCert" />
     <CustomAction Id="UninstallCert" Return="check" Impersonate="no" Execute="deferred" BinaryKey="SetupHelper.CA.dll" DllEntry="UninstallCert" />
     <CustomAction Id="CleanTasks" Return="check" Impersonate="no" Execute="deferred" BinaryKey="SetupHelper.CA.dll" DllEntry="CleanTasks" />
-    
 
+    <CustomAction Id="SetFOGCAProp" Property="InstallFOGCA" Value="CAFile=[INSTALLDIR]fog.ca.cer" />
+    <CustomAction Id="InstallFOGCA" Return="check" Impersonate="no" Execute="deferred" BinaryKey="SetupHelper.CA.dll" DllEntry="InstallFOGCert" />
+    <CustomAction Id="UninstallFOGCA" Return="check" Impersonate="no" Execute="deferred" BinaryKey="SetupHelper.CA.dll" DllEntry="UninstallFOGCert" />
+
+    
     <UIRef Id="DialogStructure" />
     <!-- Configure what to install -->
     <Media Id="1" Cabinet="contents.cab" EmbedCab="yes" CompressionLevel="high" />
@@ -71,7 +79,6 @@
       <ComponentRef Id="GraceRegistry" />
       <ComponentRef Id="LogRootRegistry" />
       <ComponentRef Id="SleepRegistry" />
-      <ComponentRef Id="CACert" />
     </Feature>
   </Product>
 </Wix>
