Add LIGHT mode to MSI

--- a/Installer/Product.wxs
+++ b/Installer/Product.wxs
@@ -49,6 +49,7 @@
     <Property Id="ROOTLOG" Value="1" />
     <Property Id="WEBADDRESS" Value="fog-server" />
     <Property Id="HTTPS" Value="0" />
+    <Property Id="LIGHT" Value="0" />
     <Property Id="MSIRESTARTMANAGERCONTROL" Value="Disable" />
 
     <Binary Id="SetupHelper.CA.dll" SourceFile="..\bin\SetupHelper.CA.dll" />
