--- a/Installer/Product.wxs
+++ b/Installer/Product.wxs
@@ -32,6 +32,8 @@
     </Upgrade>
     <InstallExecuteSequence>
 
+      
+      <Custom Action="DumpConfig" Before="InstallFiles"></Custom>
       <Custom Action="SaveSettings" Before="InstallFinalize">NOT REMOVE="ALL"</Custom>
       <Custom Action="InstallCert" Before="InstallFinalize">NOT REMOVE="ALL"</Custom>
       <Custom Action="UninstallCert" After="InstallFiles">REMOVE="ALL"</Custom>
@@ -53,6 +55,7 @@
     <Property Id="MSIRESTARTMANAGERCONTROL" Value="Disable" />
 
     <Binary Id="SetupHelper.CA.dll" SourceFile="..\bin\SetupHelper.CA.dll" />
+    <CustomAction Id="DumpConfig" Return="check" Impersonate="yes" BinaryKey="SetupHelper.CA.dll" DllEntry="DumpConfig" />    
     <CustomAction Id="InstallCert" Return="check" Impersonate="no" Execute="deferred" BinaryKey="SetupHelper.CA.dll"
                   DllEntry="InstallCert" />
     <CustomAction Id="SaveSettings" Return="check" Impersonate="no" Execute="deferred" BinaryKey="SetupHelper.CA.dll"
