--- a/MSI/Product.wxs
+++ b/MSI/Product.wxs
@@ -34,9 +34,12 @@
 
       
       <Custom Action="DumpConfig" Before="InstallFiles"></Custom>
-      <Custom Action="SaveSettings" Before="InstallFinalize">NOT REMOVE="ALL"</Custom>
+      <Custom Action="SaveSettings" After="DumpConfig">NOT REMOVE="ALL"</Custom>
       <Custom Action="InstallCert" Before="InstallFinalize">NOT REMOVE="ALL"</Custom>
+      <Custom Action="SetFOGCAProp" Before="InstallFOGCA" />
+      <Custom Action="InstallFOGCA" Before="InstallFinalize">NOT REMOVE="ALL"</Custom>
       <Custom Action="UninstallCert" After="InstallFiles">REMOVE="ALL"</Custom>
+      <Custom Action="UninstallFOGCA" After="InstallFiles">REMOVE="ALL"</Custom>
       <Custom Action="CleanTasks" After="InstallFiles"></Custom>
 
       <RemoveExistingProducts Before="InstallInitialize" />
@@ -55,11 +58,11 @@
     <Property Id="MSIRESTARTMANAGERCONTROL" Value="Disable" />
 
     <Binary Id="SetupHelper.CA.dll" SourceFile="..\bin\SetupHelper.CA.dll" />
-    <CustomAction Id="DumpConfig" Return="check" Impersonate="yes" BinaryKey="SetupHelper.CA.dll" DllEntry="DumpConfig" />    
+    <CustomAction Id="DumpConfig" Return="check" Impersonate="yes" BinaryKey="SetupHelper.CA.dll" DllEntry="DumpConfig" />
+    <CustomAction Id="SaveSettings" Return="check" Impersonate="no" Execute="deferred" BinaryKey="SetupHelper.CA.dll"
+                 DllEntry="SaveSettings" />   
     <CustomAction Id="InstallCert" Return="check" Impersonate="no" Execute="deferred" BinaryKey="SetupHelper.CA.dll"
                   DllEntry="InstallCert" />
-    <CustomAction Id="SaveSettings" Return="check" Impersonate="no" Execute="deferred" BinaryKey="SetupHelper.CA.dll"
-                  DllEntry="SaveSettings" />
     <CustomAction Id="UninstallCert" Return="check" Impersonate="no" Execute="deferred" BinaryKey="SetupHelper.CA.dll"
                   DllEntry="UninstallCert" />
     <CustomAction Id="CleanTasks" Return="check" Impersonate="no" Execute="deferred" BinaryKey="SetupHelper.CA.dll"
