--- a/MSI/Product.wxs
+++ b/MSI/Product.wxs
@@ -2,7 +2,7 @@
 
 <!--
  FOG Service : A computer management client for the FOG Project
- Copyright (C) 2014-2015 FOG Project
+ Copyright (C) 2014-2016 FOG Project
 
  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU General Public License
@@ -31,8 +31,7 @@
                       IncludeMinimum="no" IncludeMaximum="yes" MigrateFeatures="yes" />
     </Upgrade>
     <InstallExecuteSequence>
-
-      
+      <Custom Action="CheckForLegacy" Before="InstallFiles">NOT REMOVE="ALL"</Custom>
       <Custom Action="DumpConfig" Before="InstallFinalize"></Custom>
       <Custom Action="SaveSettings" After="DumpConfig">NOT REMOVE="ALL"</Custom>
       <Custom Action="InstallCert" After="SaveSettings">NOT REMOVE="ALL"</Custom>
@@ -58,6 +57,8 @@
     <Property Id="MSIRESTARTMANAGERCONTROL" Value="Disable" />
 
     <Binary Id="SetupHelper.CA.dll" SourceFile="..\bin\SetupHelper.CA.dll" />
+    <CustomAction Id="CheckForLegacy" Return="check" Impersonate="no" Execute="deferred" BinaryKey="SetupHelper.CA.dll" 
+                  DllEntry="CheckForLegacy" />
     <CustomAction Id="DumpConfig" Return="check" Impersonate="yes" BinaryKey="SetupHelper.CA.dll" DllEntry="DumpConfig" />
     <CustomAction Id="SaveSettings" Return="check" Impersonate="no" Execute="deferred" BinaryKey="SetupHelper.CA.dll"
                  DllEntry="SaveSettings" />   
