--- a/MSI/Product.wxs
+++ b/MSI/Product.wxs
@@ -20,24 +20,27 @@
 -->
 
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi" xmlns:iis="http://schemas.microsoft.com/wix/IIsExtension">
-  <Product Id="*" Name="FOG Service" Language="1033" Version="0.10.2" UpgradeCode="1CCFDEAF-53E9-43AC-AE18-F9F86CEFA4EA"
+  <Product Id="*" Name="FOG Service" Language="1033" Version="0.10.3" UpgradeCode="1CCFDEAF-53E9-43AC-AE18-F9F86CEFA4EA"
            Manufacturer="FOG">
     <Package Description="FOG Service" Comments="A client for the FOG project" InstallerVersion="300" Compressed="yes"
              InstallScope="perMachine" />
     <!-- Remove old versions -->
     <Upgrade Id="1CCFDEAF-53E9-43AC-AE18-F9F86CEFA4EA">
       <UpgradeVersion OnlyDetect="yes" Minimum="0.0.0" Property="NEWERVERSIONDETECTED" IncludeMinimum="no" />
-      <UpgradeVersion OnlyDetect="no" Minimum="0.0.0" Maximum="0.10.1" Property="OLDERVERSIONBEINGUPGRADED"
+      <UpgradeVersion OnlyDetect="no" Minimum="0.0.0" Maximum="0.10.2" Property="OLDERVERSIONBEINGUPGRADED"
                       IncludeMinimum="no" IncludeMaximum="yes" MigrateFeatures="yes" />
     </Upgrade>
     <InstallExecuteSequence>
       <Custom Action="CheckForLegacy" Before="InstallFiles">NOT REMOVE="ALL"</Custom>
-      <Custom Action="DumpConfig" Before="InstallFinalize"></Custom>
-      <Custom Action="SaveSettings" After="DumpConfig">NOT REMOVE="ALL"</Custom>
+      <Custom Action="SaveSettings" Before="InstallFinalize">NOT REMOVE="ALL"</Custom>
+      <Custom Action="SetSettingsProps" Before="SaveSettings" />
       <Custom Action="InstallCert" After="SaveSettings">NOT REMOVE="ALL"</Custom>
       <Custom Action="SetFOGCAProp" Before="InstallFOGCA" />
+      <Custom Action="SetCertProp" Before="InstallCert" />
+
       <Custom Action="InstallFOGCA" After="SaveSettings">NOT REMOVE="ALL"</Custom>
       <Custom Action="UninstallCert" After="InstallFiles">REMOVE="ALL"</Custom>
+
       <Custom Action="UninstallFOGCA" After="InstallFiles">REMOVE="ALL"</Custom>
       <Custom Action="CleanTasks" After="InstallFiles"></Custom>
 
@@ -59,7 +62,6 @@
     <Binary Id="SetupHelper.CA.dll" SourceFile="..\bin\SetupHelper.CA.dll" />
     <CustomAction Id="CheckForLegacy" Return="check" Impersonate="no" Execute="deferred" BinaryKey="SetupHelper.CA.dll" 
                   DllEntry="CheckForLegacy" />
-    <CustomAction Id="DumpConfig" Return="check" Impersonate="yes" BinaryKey="SetupHelper.CA.dll" DllEntry="DumpConfig" />
     <CustomAction Id="SaveSettings" Return="check" Impersonate="no" Execute="deferred" BinaryKey="SetupHelper.CA.dll"
                  DllEntry="SaveSettings" />   
     <CustomAction Id="InstallCert" Return="check" Impersonate="no" Execute="deferred" BinaryKey="SetupHelper.CA.dll"
@@ -68,7 +70,9 @@
                   DllEntry="UninstallCert" />
     <CustomAction Id="CleanTasks" Return="check" Impersonate="no" Execute="deferred" BinaryKey="SetupHelper.CA.dll"
                   DllEntry="CleanTasks" />
-
+                     
+    <CustomAction Id="SetSettingsProps" Property="SaveSettings" Value="sHTTPS=[HTTPS];sUSETRAY=[USETRAY];sWEBADDRESS=[WEBADDRESS];sWEBROOT=[WEBROOT];sROOTLOG=[ROOTLOG];sProductVersion=[ProductVersion];sINSTALLDIR=[INSTALLDIR]" />
+    <CustomAction Id="SetCertProp" Property="InstallCert" Value="sHTTPS=[HTTPS];sUSETRAY=[USETRAY];sWEBADDRESS=[WEBADDRESS];sWEBROOT=[WEBROOT];sROOTLOG=[ROOTLOG];sProductVersion=[ProductVersion];sINSTALLDIR=[INSTALLDIR]" />
 
     <CustomAction Id="SetFOGCAProp" Property="InstallFOGCA" Value="CAFile=[INSTALLDIR]fog.ca.cer" />
     <CustomAction Id="InstallFOGCA" Return="check" Impersonate="no" Execute="deferred" BinaryKey="SetupHelper.CA.dll" DllEntry="InstallFOGCert" />
